--- a/style.css
+++ b/style.css
@@ -1,46 +1,60 @@
-$colors : #fedc00 0,
-			#fedc00 1/18 * 100%,
-			#fcb712 0,
-			#fcb712 2/18 * 100%,
-			#f7921e 0,
-			#f7921e 3/18 * 100%,
-			#e87f24 0,
-			#e87f24 4/18 * 100%,
-			#dd6227 0,
-			#dd6227 5/18 * 100%,
-			#dc4c27 0,
-			#dc4c27 6/18 * 100%,
-			#ca3435 0,
-			#ca3435 7/18 * 100%,
-			#b82841 0,
-			#b82841 8/18 * 100%,
-			#953751 0,
-			#953751 9/18 * 100%,
-			#364c88 0,
-			#364c88 10/18 * 100%,
-			#16599d 0,
-			#16599d 11/18 * 100%,
-			#02609e 0,
-			#02609e 12/18 * 100%,
-			#0073a9 0,
-			#0073a9 13/18 * 100%,
-			#008aa4 0,
-			#008aa4 14/18 * 100%,
-			#239a87 0,
-			#239a87 15/18 * 100%,
-			#7cba6d 0,
-			#7cba6d 16/18 * 100%,
-			#becc2f 0,
-			#becc2f 17/18 * 100%,
-			#e0d81d 0,
-			#e0d81d 18/18 * 100%;
+$bgcolor: #FFE9A3;
+$transparent: rgba(255, 255, 255, 0);
 
-// $colors : #fedc00, #fcb712, #f7921e, #e87f24, #dd6227, #dc4c27, #ca3435, #b82841, #953751, #364c88, #16599d, #02609e, #0073a9, #008aa4, #239a87, #7cba6d, #becc2f, #e0d81d;
+$color-1: #E83A25;
+$color-1-t: transparentize($color-1, 1);
+$color-2: #98CC96;
+$color-2-t: transparentize($color-2, 1);
 
-body {
-	background: 
-		repeating-radial-gradient(circle at bottom left, $colors),
-		repeating-radial-gradient(circle at bottom right, $colors);
-	background-blend-mode: overlay;
-	height: 100vh;
-}
+$size: 4em;
+$big-size: $size*2;
+$min: $size*.3;
+$max: $size*.7;
+
+HTML {
+  height: 100%;
+  }
+BODY {
+  background: 
+    linear-gradient(135deg,
+      $color-1 $min,
+      $color-1-t $min
+      ) 0 #{$size},
+    linear-gradient(-135deg,
+      $color-1 $min,
+      $color-1-t $min
+      ) 0 #{$size},
+    
+    radial-gradient(circle at #{$big-size - $min*.7} $size*1.85,
+      $color-1 $min*.85,
+      $color-1-t $min*.87
+      ) 0 -#{$size},
+    radial-gradient(circle at #{$min*.7} $size*1.85,
+      $color-1 $min*.85,
+      $color-1-t $min*.87
+      ) 0 -#{$size},
+
+
+    linear-gradient(135deg,
+      $color-2 $min,
+      $color-2-t $min
+      ) $size 0,
+    linear-gradient(-135deg,
+      $color-2 $min,
+      $color-2-t $min
+      ) $size 0,
+    
+    radial-gradient(circle at #{$big-size - $min*.7} $size*1.85,
+      $color-2 $min*.85,
+      $color-2-t $min*.87
+      ) $size 0,
+    radial-gradient(circle at #{$min*.7} $size*1.85,
+      $color-2 $min*.85,
+      $color-2-t $min*.87
+      ) $size 0
+    ;
+  background-size:  $big-size $big-size;
+  background-color: $bgcolor;
+  background-repeat: repeat;
+  font: 16px/2 'Trebuchet MS', Verdana, sans-serif;
+  }
